--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>covid-19 tracker</title>
+    <title>covid-19-stats</title>
+    <meta name="description" content="Corona viurs tracking website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/test.css">
